# mcp-freelancehunt

./: .gitignore  LICENSE  README.md  client.py  env.example  pyproject.toml  server.py  setup.py
src/freelancehunt_mcp/: api_client.py  models.py  server.py
src/freelancehunt_mcp/handlers/: __init__.py  base.py  contest_handlers.py  freelancer_handlers.py  location_handlers.py  project_handlers.py  thread_handlers.py
src/freelancehunt_mcp/models/: __init__.py  base.py  bid.py  contest.py  filters.py  freelancer.py  location.py  project.py  thread.py
tests/: test_models.py
